Added some new songs and repaired bugs.

--- a/obsah-lidovky.tex
+++ b/obsah-lidovky.tex
@@ -25,6 +25,8 @@ linkcolor=black
 
 \hylo{cerneocijdetespat}{Černé oči, jděte spát}
 
+\hylo{ceskapisnicka}{Česká písnička}
+
 \hylo{cizesutokone}{Čí že sú to koně}
 
 \hylo{ejhorahora}{Ej, hora, hora}
@@ -53,6 +55,10 @@ linkcolor=black
 
 \hylo{islamarina}{Išla Marina}
 
+\hylo{jakejetohezke}{Jaké je to hezké}
+
+\hylo{jarosovskypivovar}{Jarošovský pivovar}
+
 \hylo{jedesohajzvidna}{Jede šohaj z Vídňa}
 
 \hylo{kedsomisiel}{Keď som išiel}
@@ -71,7 +77,11 @@ linkcolor=black
 
 \hylo{kdyzsemselzhradista}{Když sem šel z Hradišťa}
 
+\hylo{kolenasejchalupecky}{Kole našej chałupečky}
+
 \hylo{letochovahospudecka}{Letochova hospůdečka}
+
+\hylo{marjankomarjanko}{Marjánko, Marjánko}
 
 \hylo{masirujunafrancuza}{Mašírujú na Francúza}
 
@@ -111,7 +121,11 @@ linkcolor=black
 
 \hylo{pridijanoknam}{Prídi, Jano, k nám}
 
+\hylo{predsusedovym}{Před sušedovym}
+
 \hylo{rezrezrez}{Rež, rež, rež}
+
+\hylo{roztrhanachalupka}{Roztrhana chałupka}
 
 \hylo{sbohemgalanecko}{Sbohem, galánečko}
 
@@ -137,6 +151,8 @@ linkcolor=black
 
 \hylo{jedesohajzvidna}{\textit{Teče voda, teče, ryby po ní skáčú} (Jede šohaj z Vídňa)}
 
+\hylo{tetkajulka}{Tětka Julka}
+
 \hylo{tikoberstisynci}{Ti koberští synci}
 
 \hylo{totahelpa}{To ta Heľpa}
@@ -150,4 +166,6 @@ linkcolor=black
 \hylo{vyletelaholubicka}{Vyletěla holubička}
 
 \hylo{vysokyjalovec}{Vysoký jalovec}
+
+\hylo{zadnyjnevicosoudomazlice}{Žádnyj neví, co sou Domažlice}
 \end{multicols}
