--- a/pisnicky/beskydebeskyde.tex
+++ b/pisnicky/beskydebeskyde.tex
@@ -2,8 +2,8 @@
 \song{Beskyde, Beskyde}
 
 \vers{1}{
-\chord{E}Beskyde, Besky\chord{H\7}de, kdo po tobě i\chord{E}de?\\
-\rep{\chord{A}Černooký bača \chord{E}ovečky \chord{H\7}zatá\chord{E}čá.}
+\chord{D}Beskyde, Besky\chord{A\7}de, kdo po tobě i\chord{D}de?\\
+\rep{\chord{G}Černooký bača \chord{D}ovečky \chord{A\7}zatá\chord{D}čá.}
 }
 
 \vers{2}{
