--- a/pisnicky/cizesutokone.tex
+++ b/pisnicky/cizesutokone.tex
@@ -22,4 +22,11 @@ Ušije mi čižmy pre tanec, pre tanec.\\
 Bude-li to dievča, Jezu Maria,\\
 \rep{bude frajárka ako já.}
 }
+
+\vers{4}{
+Hop, koníčky moje, do skoku, do skoku,\\
+budem ležat milej pri boku, priboku.\\
+Něbudem sa modliť, otče, otčenáš,\\
+\rep{pojedeme spolem na sobáš.}
+}
 \newpage
