--- a/pisnicky/okolohradce.tex
+++ b/pisnicky/okolohradce.tex
@@ -2,15 +2,15 @@
 \song{Okolo Hradce}
 
 \vers{1}{
-\rep{\chord{G}Okolo Hradce, v malé zahrádce, \chord{D}rostou tam tři rů\chord{D\7}že.}\\
-\rep{\chord{G}Jedna je \chord{C}červená, \chord{D}druhá je \chord{G}bílá, třetí kve\chord{D}te mod\chord{G}ře.}
+\rep{\chord{D}Okolo Hradce, v malé zahrádce, \chord{E}rostou tam tři rů\chord{A\7}že.}\\
+\rep{\chord{D}Jedna je \chord{G}červená, \chord{A}druhá je \chord{D}bílá, třetí kve\chord{A}te mod\chord{D}ře.}
 }
 
 \refrain{
-\chord{G}Vojáci jdou, vojáci jdou, Bože, jaká je to krá\chord{D}sa,\\
-\chord{D}vojáci jdou, vojáci jdou, pěkně v řadách za se\chord{G}bou.\\
-\chord{G}Vojáci jdou, vojáci jdou, každé dívčí srdce \chord{C}jásá,\\
-když \chord{C}vojáci \chord{G}jdou, vojáci jdou, pěkně \chord{D}v řadách za se\chord{G}bou.
+\chord{D}Vojáci jdou, vojáci jdou, Bože, jaká je to krá\chord{A}sa,\\
+\chord{A}vojáci jdou, vojáci jdou, pěkně v řadách za se\chord{D}bou.\\
+\chord{D}Vojáci jdou, vojáci jdou, každé dívčí srdce \chord{G}jásá,\\
+když \chord{G}vojáci \chord{D}jdou, vojáci jdou, pěkně \chord{A}v řadách za se\chord{D}bou.
 }
 
 \vers{2}{
