--- a/zpevnik-lidovky.tex
+++ b/zpevnik-lidovky.tex
@@ -110,6 +110,7 @@
 \include{pisnicky/cosatosupoce}
 \include{pisnicky/ceresnicky}
 \include{pisnicky/cerneocijdetespat}
+\include{pisnicky/ceskapisnicka}
 \include{pisnicky/cizesutokone}
 \include{pisnicky/ejhorahora}
 \include{pisnicky/ejtahuckahospoda}
@@ -124,6 +125,8 @@
 \include{pisnicky/idzepostaridze}
 \include{pisnicky/isielmacekdomalacek}
 \include{pisnicky/islamarina}
+\include{pisnicky/jakejetohezke}
+\include{pisnicky/jarosovskypivovar}
 \include{pisnicky/jedesohajzvidna}
 \include{pisnicky/kedsomisiel}
 \include{pisnicky/kedsomisielzrana}
@@ -132,7 +135,9 @@
 \include{pisnicky/kdybychbylaptackem}
 \include{pisnicky/kdybytadybylatakovapanenka}
 \include{pisnicky/kdyzsemselzhradista}
+\include{pisnicky/kolenasejchalupecky}
 \include{pisnicky/letochovahospudecka}
+\include{pisnicky/marjankomarjanko}
 \include{pisnicky/masirujunafrancuza}
 \include{pisnicky/muzikanticodelate}
 \include{pisnicky/nacopojdemdomov}
@@ -149,8 +154,10 @@
 \include{pisnicky/plavalahusickapodunaji}
 \include{pisnicky/podnasimokynkem}
 \include{pisnicky/potrikratsomnaokenkotukal}
+\include{pisnicky/predsusedovym}
 \include{pisnicky/pridijanoknam}
 \include{pisnicky/rezrezrez}
+\include{pisnicky/roztrhanachalupka}
 \include{pisnicky/sbohemgalanecko}
 \include{pisnicky/sklenickotysklenena}
 \include{pisnicky/spanembohemidemodvas}
@@ -162,6 +169,7 @@
 \include{pisnicky/tamokololevoci}
 \include{pisnicky/tancujtancujvykrucaj}
 \include{pisnicky/tecevodatece}
+\include{pisnicky/tetkajulka}
 \include{pisnicky/tikoberstisynci}
 \include{pisnicky/totahelpa}
 \include{pisnicky/uztypilkydorezaly}
@@ -169,6 +177,7 @@
 \include{pisnicky/vsinidolinecka}
 \include{pisnicky/vyletelaholubicka}
 \include{pisnicky/vysokyjalovec}
+\include{pisnicky/zadnyjnevicosoudomazlice}
 	
 \end{Large}
 \include{obsah-lidovky}
