--- a/pisnicky/escesijapoharvinazaplatim.tex
+++ b/pisnicky/escesijapoharvinazaplatim.tex
@@ -3,7 +3,7 @@
 
 \vers{1}{
 \chord{Dm}Ešče \chord{A}si já, \chord{F}ešče \chord{Gm}si já \chord{A}pohár vína \chord{Dm}zaplatím.\\
-\chord{Am}Potom \chord{E\7}sa já, \chord{C}potom \chord{Dm}sa já \chord{E\7}k mojej milej \chord{Am}navrátím.\\
+\chord{Am}Potom \chord{E\7}sa já, \chord{C}potom \chord{Dm}sa já \chord{E\7}k mojej milej \chord{Am}navrá\chord{A}tím.\\
 \rep{\chord{Dm}Od ve\chord{F}čera \chord{Gm}do rá\chord{Dm}na, muzi\chord{A}ka nám \chord{Dm}vyhrá\chord{A}vá\\
 \chord{Dm}a já \chord{A}pijem, \chord{F}pijem, pijem, \chord{Gm}pijem, \chord{A}len z pl\chord{A\7}ného \chord{Dm}pohára.}
 }
