--- a/preamble/obalka.tex
+++ b/preamble/obalka.tex
@@ -6,7 +6,7 @@
 		\selectfont
 		\color{white}
 		\fontsize{35}{40}
-		\textbf{\textbf{\textit{lidové písničky}}}
+		\textbf{\textbf{\textsl{lidové písničky}}}
 }
 \restoregeometry
 \newpage
